[package]
name = "twitch-chat-tui"
version = "0.1.0"
authors = [ "Dario Freni <dario.freni@gmail.com>" ]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
chrono = "0.4.19"
crossterm = "0.20.0"
figment = { version = "0.10.5", features = [ "env", "toml" ] }
serde = { version = "1.0.126", features = [ "derive" ] }
structopt = "0.3.21"
textwrap = "0.14.0"
tokio = { version = "1.6.1", features = [ "rt-multi-thread" ] }
tui = { version = "0.15.0", features = [ "crossterm" ] }
twitch-irc = "2.2.0"
